Increased supported positionlist size. Added group by